<resources>
    <string name="app_name">Inventory+</string>
    <string name="login_prompt">Login</string>
    <string name="username">Email address</string>
    <string name="password">Password</string>
    <string name="name">First Name</string>
    <string name="phone">Phone: 10 digits</string>
    <string name="register">Register</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit">Edit</string>
    <string name="description">Item Description</string>
    <string name="quantity">Item Quantity</string>
    <string name="delete">Delete Item</string>
    <string name="decrement">Minus</string>
    <string name="increment">Add</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="item_description">Item Description</string>
    <string name="item_count">Item Count</string>
    <string name="sms_prompt">SMS Notifications</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="sms_rationale">This app can send SMS messages to notify of on-hand inventory
    reaching zero for any item. This functionality will not be available without this permission.
    </string>
    <string name="sms_works">SMS Granted</string>
    <string name="sms_granted">SMS Permission Granted</string>
    <string name="ok">OK</string>
    <string name="count">Count</string>
    <string name="del">Del</string>
    <string name="fields_required">All fields are required</string>
    <string name="user_added">User added</string>
    <string name="user_add_error">Error: Unable to add user</string>
    <string name="user_does_not_exist">Error: User does not exist</string>
    <string name="invalid_password">Error: Invalid password</string>
    <string name="login_success">Success: Logged in</string>
    <string name="invalid_phone">Error: Phone number does not match</string>
    <string name="add_item_success">Success: Item added</string>
    <string name="add_item_fail">Error: Item not added</string>
    <string name="edit_item_success">Success: Item updated</string>
    <string name="edit_item_fail">Error: Item not updated</string>
    <string name="password_retrieved">Password is: %s</string>
</resources>