<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/teal_200">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_prompt"
        android:textSize="28sp"
        android:textColor="@color/primary"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImageView" />

    <EditText
        android:id="@+id/editTextEditUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/account"
        android:background="@drawable/input_rectangle"
        android:drawableTint="@color/faded_primary"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/lock"
        android:background="@drawable/input_rectangle"
        android:drawableTint="@color/faded_primary"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditUsername" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/name"
        android:background="@drawable/input_rectangle"
        android:drawableTint="@color/faded_primary"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/phone"
        android:background="@drawable/input_rectangle"
        android:drawableTint="@color/faded_primary"
        android:drawablePadding="12dp"
        android:ems="12"
        android:hint="@string/phone"
        android:inputType="phone"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/login_prompt"
        app:layout_constraintRight_toRightOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

    <Button
        android:id="@+id/registerAcceptButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/accept"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="@id/editTextEditUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

    <Button
        android:id="@+id/registerCancelButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/cancel"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/editTextEditUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone" />

    <Button
        android:id="@+id/forgotButton"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:text="@string/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>